--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "app-senetic-shopify",
-  "version": "1.0.0",
+  "version": "2.0.0",
+  "description": "Sincronizzazione automatica Senetic → Shopify",
   "main": "api/index.js",
   "scripts": {
     "start": "node api/index.js",
-    "dev": "vercel dev"
+    "dev": "vercel dev",
+    "deploy": "vercel --prod"
   },
   "dependencies": {
     "axios": "^1.10.0",
@@ -14,5 +16,8 @@
   },
   "devDependencies": {
     "vercel": "^33.0.0"
-  }
+  },
+  "keywords": ["shopify", "senetic", "sync", "ecommerce"],
+  "author": "Massimo Facchini",
+  "license": "MIT"
 }
