--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "node api/index.js",
     "dev": "vercel dev",
-    "deploy": "vercel --prod"
+    "deploy": "vercel --prod",
+    "deploy:auto": "./deploy.sh",
+    "deploy:quick": "./deploy.sh 'Quick deploy'"
   },
   "dependencies": {
     "axios": "^1.10.0",
